# federated-embedded-vision

./: README.md  client.py  main.py  plot.ipynb  pyproject.toml  requirements.txt  server.py
conf/: base.yaml  client.yaml
conf/dataset_fn/: in_fs.yaml  in_memory.yaml
conf/model/: convnext_base.yaml  convnext_small.yaml  convnext_tiny.yaml  deit_base.yaml  deit_small.yaml  deit_tiny.yaml  edgenext_base.yaml  edgenext_small.yaml  edgenext_x_small.yaml  efficientformer_l1.yaml  efficientformer_l3.yaml  efficientformer_l7.yaml  efficientnet_b0.yaml  efficientnet_b1.yaml  efficientnet_b2.yaml  efficientnet_b3.yaml  efficientvit_b0.yaml  efficientvit_b1.yaml  efficientvit_b2.yaml  efficientvit_b3.yaml  faster_vit_0.yaml  faster_vit_1.yaml  faster_vit_2.yaml  faster_vit_3.yaml  fastvit_t12.yaml  fastvit_t8.yaml  ghostnetv2_100.yaml  ghostnetv2_130.yaml  ghostnetv2_160.yaml  inception_next_base.yaml  inception_next_small.yaml  inception_next_tiny.yaml  maxvit_base.yaml  maxvit_small.yaml  maxvit_tiny.yaml  mlpmixer_b16.yaml  mnasnet_050.yaml  mnasnet_075.yaml  mnasnet_100.yaml  mobilenetv2_050.yaml  (+19 more)
conf/tasks/: evaluate.yaml  finetune.yaml  train.yaml
eflbench/: bench.py  dataset.py  jobs.py  models.py
results/blog/: rpi4_bench_results.pkl
